@@ -43,6 +43,9 @@ Release 1.3.0 - unreleased
     HDFS-3794. WebHDFS Open used with Offset returns the original (and incorrect)
     Content Length in the HTTP Header. (Tsz Wo (Nicholas), SZE via cnauroth)
 
+    HDFS-7503. Namenode restart after large deletions can cause slow
+    processReport (Arpit Agarwal)
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
